[gd_scene load_steps=4 format=3 uid="uid://b8ic3kfnaq2wk"]

[ext_resource type="Script" path="res://Examples/FlappyTest/Game.gd" id="1_80riy"]
[ext_resource type="Texture2D" uid="uid://l04islombetp" path="res://Examples/FlappyTest/Player/Background.png" id="2_k6ek1"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(432, 42.5)

[node name="FlappyTest" type="Node2D"]
script = ExtResource("1_80riy")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Obstacles" type="Node2D" parent="."]

[node name="Players" type="Node2D" parent="."]

[node name="PlayerPoint" type="Marker2D" parent="."]
position = Vector2(55, 283)

[node name="Points" type="Node2D" parent="."]

[node name="1" type="Marker2D" parent="Points"]
position = Vector2(1097, 390)

[node name="2" type="Marker2D" parent="Points"]
position = Vector2(1097, 184)

[node name="3" type="Marker2D" parent="Points"]
position = Vector2(1097, 283)

[node name="4" type="Marker2D" parent="Points"]
position = Vector2(1097, 486)

[node name="5" type="Marker2D" parent="Points"]
position = Vector2(1097, 88)

[node name="Area2D" type="Area2D" parent="." groups=["obstacle"]]
position = Vector2(-199, 690)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(422, -32.5)
shape = SubResource("1")

[node name="Area2D2" type="Area2D" parent="." groups=["obstacle"]]
position = Vector2(-215, -14)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(422, -32.5)
shape = SubResource("1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Interface" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/Interface"]
self_modulate = Color(1, 1, 1, 0.329412)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_font_sizes/font_size = 100
vertical_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Interface"]
layout_mode = 0
offset_left = 968.0
offset_top = 6.0
offset_right = 1133.0
offset_bottom = 72.0

[node name="ForceNextGeneration" type="Button" parent="CanvasLayer/Interface/VBoxContainer"]
layout_mode = 2
text = "Forced regeneration"

[node name="Visualize" type="Button" parent="CanvasLayer/Interface/VBoxContainer"]
layout_mode = 2
text = "Visualize"

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/ParallaxBackground"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_k6ek1")
expand_mode = 1

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="pressed" from="CanvasLayer/Interface/VBoxContainer/ForceNextGeneration" to="." method="_on_force_next_generation_pressed"]
[connection signal="pressed" from="CanvasLayer/Interface/VBoxContainer/Visualize" to="." method="_on_Visualize_pressed"]
